--- a/css/style2.css
+++ b/css/style2.css
@@ -1,5 +1,39 @@
 
-
+.social {
+	position: fixed;
+	left: 0; 
+	top:450px; 
+	z-index: 2000; 
+}
+ 
+	.social ul {
+		list-style: none;
+	}
+ 
+	.social ul li a {
+		display: inline-block;
+		color:#fff;
+		background: #000;
+		padding: 10px 15px;
+		text-decoration: none;
+		-webkit-transition:all 500ms ease;
+		-o-transition:all 500ms ease;
+		transition:all 500ms ease; 
+	}
+ 
+	.social ul li .icon-facebook {background:#3b5998;} 
+	.social ul li .icon-twitter {background: #00abf0;}
+	.social ul li .icon-google {background: #d95232;}
+	.social ul li .icon-instagram {background: #ae181f;}
+	.social ul li .icon-mail {background: #666666;}
+ 
+  
+  
+  .social ul li a:hover {
+		background: #000; 
+		padding: 10px 30px; 
+  }
+  
 nav ul a,
 nav .brand-logo {
   color: #000;
@@ -7,6 +41,7 @@ nav .brand-logo {
  
 p {
   line-height: 2rem;
+  text-align: center;
 }
 
 
@@ -22,6 +57,7 @@ p {
 }
   .parallax-container .section {
     width: 100%;
+    
   }
 .fab {
 margin-left: 200px;
